# lightning-examples

./: .gitignore  pyproject.toml  requirements.txt
object_detection/: app.py
